# genshin-subtitle-corrector

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
src/subtitle_corrector/: __init__.py  cli.py  events.py  schemas.py
src/subtitle_corrector/aliasing/: __init__.py  asr_alias.py  cleaner.py  policy.py  populator.py  runtime.py
src/subtitle_corrector/character_alias/: __init__.py  lexicon.py  team_comp.py
src/subtitle_corrector/config/: __init__.py  settings.py
src/subtitle_corrector/detector/: __init__.py  base.py  entity.py  jieba_span.py  language_model.py  pinyin.py  terminology.py
src/subtitle_corrector/evaluation/: __init__.py  benchmark.py  fn_attribution.py  fn_trace.py  metrics.py
src/subtitle_corrector/guide_corpus/: __init__.py  cleaner.py  fetcher.py  pipeline.py  schema.py  sentence_splitter.py  sources.py
src/subtitle_corrector/knowledge/: __init__.py  cards.py
src/subtitle_corrector/logging/: __init__.py  setup.py
src/subtitle_corrector/matcher/: __init__.py  retriever.py  terminology.py
src/subtitle_corrector/memory/: __init__.py  category_activation.py  correction_reuse.py  entity.py  history.py  schema.py  sqlite.py
src/subtitle_corrector/normal_lm/: __init__.py  model.py  scorer.py  trainer.py
src/subtitle_corrector/normalize/: __init__.py  text.py
src/subtitle_corrector/pinyin/: __init__.py  converter.py
src/subtitle_corrector/pipeline/: __init__.py  candidate_alignment.py  candidate_expansion.py  commit.py  discovery.py  executor.py  factory.py  reducer.py  refinement.py  replay.py  requery.py  (+1 more)
(+21 files in other folders)
