[project]
name = "subtitle-corrector"
version = "0.1.0"
description = "Industrial-grade post-ASR Chinese subtitle correction pipeline for game videos."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "rapidfuzz>=3.6",
  "pypinyin>=0.50",
  "pysubs2>=1.6",
  "jieba>=0.42",
  "loguru>=0.7",
  "typer>=0.12",
  "rich>=13.8,<14",
  "openai>=1.30",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]
traditional = [
  "opencc-python-reimplemented>=0.1.7",
]
lm = [
  "kenlm>=0.2.0",
]

[project.scripts]
subtitle-corrector = "subtitle_corrector.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "genshin_final_pack",
  "data",
]
